<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical" 
    android:background="@drawable/default_bg">
	<LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android" 
		android:orientation="vertical" 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent">
		<LinearLayout 
			android:id="@+id/LinearLayout02" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:gravity="center" 
			android:layout_marginTop="10dip">
			<Button 
				android:text="@string/open_file" 
				android:id="@+id/btnOpen" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:textSize="13sp"/>
			<Button 
				android:text="@string/save_file" 
				android:id="@+id/btnSave" 
				android:layout_width="wrap_content"  
				android:layout_height="wrap_content" 
				android:layout_weight="1"
				android:textSize="13sp"/>
			<Button 
				android:text="@string/save_as_file" 
				android:id="@+id/btnSaveAs" 
				android:layout_width="wrap_content"  
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:textSize="13sp"/>
			<Button 
				android:text="@string/print_file" 
				android:id="@+id/btnPrint" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:textSize="13sp"/>
		</LinearLayout>
		<EditText 
			android:id="@+id/editTxt" 
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent" 
			android:textSize="18sp"
			android:gravity="top" 
			android:background="@drawable/edit_background"
			android:text="@string/example_text"/>
	</LinearLayout>
</ScrollView>